--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ button {
 
 #stop-input {
   background-color: unset;
-  color: #505050;
+  color: #9c9c9c;
   font-size: 2em;
   width: 5ch;
   padding: 0 0.25rem;
@@ -123,7 +123,7 @@ button {
   align-items: center;
 }
 .arrival-id {
-  color: #8d8d8d;
+  color: #ababab;
 }
 .arrival-in {
   font-weight: bold;
